# mcp-zus

./: .env.example  .gitignore  CLAUDE.md  RALPH_AUDIT_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/zus-bartosz-materials/: Instrukcja_integracji_PUE_z_SOD_za_posrednictwem_ePUAP.docx  Opis szablonów do importu podmiotów w kreatorze OK-WUD.docx  Wytyczne_techniczne_dla_komunikacji_bezpośredniej_z_ZUS.docx
docs/source/zus-bartosz-materials/Szablony - import/: OK-WUD_szablon_importu_CSV.csv  OK-WUD_szablon_importu_ODS.ods  OK-WUD_szablon_importu_XLS.xls  OK-WUD_szablon_importu_XLSX.xlsx  OK-WUD_szablon_importu_XML.XML  OK-WUD_szablon_importu_XSD.xsd
examples/: jdg_monthly_dra.py  okwud_kazus.py  register_employee.py
src/mcp_zus/: __init__.py  server.py
src/mcp_zus/crypto/: __init__.py  byo.py  xades.py
src/mcp_zus/epuap/: __init__.py  client.py
src/mcp_zus/ewd/: __init__.py  client.py  upo.py
src/mcp_zus/kedu/: __init__.py  builder.py  jdg.py  models.py  parser.py  validator.py
src/mcp_zus/kedu/schemas/: kedu_5_6.xsd
src/mcp_zus/okwud/: __init__.py  builder.py  client.py  importers.py  kody_instytucji.py  models.py  session.py
src/mcp_zus/okwud/schemas/: okwud_2020_12_29.xsd
src/mcp_zus/pue/: __init__.py  attach.py  selectors.py
src/mcp_zus/pue/pages/: __init__.py  dokumenty.py  korespondencja.py  ubezpieczeni.py
src/mcp_zus/tools/: __init__.py  crypto_tools.py  employee_tools.py  epuap_tools.py  ewd_tools.py  kedu_tools.py  okwud_tools.py  pue_tools.py
tests/: conftest.py
tests/unit/: test_crypto_byo.py  test_employee_tools.py  test_kedu_builder.py  test_kedu_models.py  test_kedu_parser.py  test_kedu_validator.py  test_okwud_builder.py  test_okwud_importers.py  test_okwud_kody.py
