[project]
name = "mcp-zus"
version = "0.1.0"
description = "Model Context Protocol server for Polish ZUS / PUE — KEDU, EWD, OK-WUD, ePUAP, browser-companion"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bartosz Gaca", email = "kontakt@bartoszgaca.pl" }]
requires-python = ">=3.11"
keywords = ["mcp", "zus", "pue", "kedu", "ewd", "okwud", "polish-egov", "xades", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Natural Language :: Polish",
]
dependencies = [
    "mcp>=1.2.0",
    "lxml>=5.3.0",
    "signxml>=4.0.0",
    "zeep>=4.3.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "odfpy>=1.4.1",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
pue = ["playwright>=1.50.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "lxml-stubs>=0.5.1",
]
all = ["mcp-zus[pue,dev]"]

[project.scripts]
mcp-zus = "mcp_zus.server:main"

[project.urls]
Repository = "https://github.com/gacabartosz/mcp-zus"
Issues = "https://github.com/gacabartosz/mcp-zus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_zus"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_zus/kedu/schemas/kedu_5_6.xsd" = "mcp_zus/kedu/schemas/kedu_5_6.xsd"
"src/mcp_zus/okwud/schemas/okwud_2020_12_29.xsd" = "mcp_zus/okwud/schemas/okwud_2020_12_29.xsd"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "PLC0415"]
"examples/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "integration: requires network or local browser",
    "manual: requires manual setup (cert, PUE login, etc.)",
]
